# kyori19-_-remote-do

./: README.md  renovate.json  rust-toolchain.toml
.github/workflows/: build.yaml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: handler.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  pipe.rs  try_join_all.rs
