[package]
name = "remote-do-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
remote-do-shared = { path = "../shared" }
shell-words = "1.1.0"
tokio = { version = "1.43.0", features = ["io-std", "rt-multi-thread"] }
tokio-fd = "=0.3.0"
tokio-util = "=0.7.13"
wtransport = { version = "=0.5.0", features = ["dangerous-configuration"] }
