[package]
name = "remote-do-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
env_logger = "=0.11.7"
log = "=0.4.27"
remote-do-shared = { path = "../shared" }
shell-words = "1.1.0"
tokio = { version = "1.44.1", features = ["process", "rt-multi-thread", "signal"] }
tokio-util = "=0.7.16"
wtransport = "=0.6.1"
