[package]
name = "remote-do-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
env_logger = "=0.11.8"
log = "=0.4.28"
remote-do-shared = { path = "../shared" }
shell-words = "1.1.0"
tokio = { version = "1.47.1", features = ["process", "rt-multi-thread", "signal"] }
tokio-util = "=0.7.17"
wtransport = "=0.6.1"
